Changes to web socket configuration minimum effort game wrap up fixes to export and preview pages

--- a/src/main/resources/plugins/minimumEffortPlugin/task.css
+++ b/src/main/resources/plugins/minimumEffortPlugin/task.css
@@ -22,3 +22,6 @@ table th {
 #roundResult {
     color:black;
 }
+#noMoreRounds {
+    color: black;
+}
